# e

./: README.md  package-lock.json  package.json  tsconfig.json
client/: pyproject.toml  requirements.txt  termchat.py  termcord.py
prisma/: schema.prisma
prisma/migrations/20210609020250_init/: migration.sql
prisma/migrations/20210609022656_make_createdat_optional/: migration.sql
src/: index.ts
